--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ ul {
     list-style-type: none;
     display: flex;
     gap: 24px;
+
 }
 
 a {
@@ -20,6 +21,12 @@ a {
     font-size: 18px;
 }
 
+button {
+    width: 100px;
+    flex-grow: 0;
+}
+
+
 
 .header {
     display: flex;
@@ -27,4 +34,31 @@ a {
     font-size: 24px;
     justify-content: space-around;
     padding: 16px;
+}
+
+
+.first {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.hero {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.subtext {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.card {
+    width: 450px;
+    height: 200px;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
