--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,15 @@ button {
     width: 100px;
     flex-grow: 0;
     padding: 6px;
-    margin-top: 10px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
 }
 
+.first > button {
+    margin-top: 10px;
+    border: 1px solid #3882F6;
+}
 
 .header {
     display: flex;
@@ -47,7 +53,7 @@ button {
     padding: 16px;
     margin: 100px;
     margin-top: 0;
-    gap: 100px;
+    gap: 50px;
     flex-wrap: wrap;
 }
 
@@ -84,11 +90,15 @@ button {
     flex-direction: column;
 }
 
-.content_1 {
-    background-color: aliceblue;
+.content {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    background-color: aliceblue;
+    flex-grow: 2;
+}
+
+.c1 {
+    flex-direction: column;
     gap: 100px;
 }
 
@@ -99,7 +109,7 @@ button {
 .square {
     width: 175px;
     height: 175px;
-    border: 5px solid blue;
+    border: 5px solid #3882F6;
     border-radius: 15px;
     margin-bottom: 10px;
 }
@@ -126,12 +136,10 @@ button {
     margin-top: 50px;
 }
 
-.content_2 {
+.c2 {
     background-color: #E5E7EB;
     padding: 150px;
-    display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .full_quote {
@@ -151,4 +159,40 @@ button {
     font-weight: bold;
     align-self: flex-end;
 }
+
+.c3 {
+    flex-grow: 1;
+    justify-content: center;
+    padding: 100px;
+}
+
+
+.rect {
+    background-color: #3882F6;
+    width: 1100px;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 10px;
+    flex-wrap: wrap;
+}
+
+.rect > button {
+    border: 2px solid #F9FAF8;
+}
+
+
+.cta {
+    display: flex;
+    flex-direction: column;
+    font-size: 22px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.cta > .subtext {
+    font-weight: normal;
+}
+
 
