Change card (image placeholder) color

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,8 @@ button {
     justify-content: center;
     align-items: center;
     align-self: flex-end;
+    background-color:rgb(104, 115, 126);
+    color: white;
 }
 
 .middle {
