--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 ul {
-    margin: 0;
+    margin-top: 15px;
     padding: 0;
     list-style-type: none;
     display: flex;
@@ -31,6 +31,41 @@ button {
     border-radius: 5px;
 }
 
+img {
+    border-radius: 5px;
+}
+
+svg {
+    width: 100px;
+    height: 100px;
+}
+
+.header > img {
+    height: 100px;
+    width: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+.card > img {
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    
+}
+
+.card > .gradient {
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(to bottom right, pink, purple);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.25;
+    border-radius: 25px;
+}
+
+
 .first > button {
     margin-top: 10px;
     border: 1px solid #3882F6;
@@ -45,6 +80,10 @@ button {
     margin-top: 0;
     padding: 16px;
     flex-wrap: wrap;
+}
+
+.top {
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
@@ -76,15 +115,9 @@ button {
 }
 
 .card {
-    width: 500px;
-    height: 200px;
-    background-color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    background-color:rgb(104, 115, 126);
-    color: white;
+    width: 684px;
+    height: 384px;
+    position: relative;
 }
 
 .middle {
@@ -111,7 +144,7 @@ button {
 .square {
     width: 175px;
     height: 175px;
-    border: 5px solid #3882F6;
+    border: 5px solid #f2713561;
     border-radius: 15px;
     margin-bottom: 10px;
 }
