--- a/styles.css
+++ b/styles.css
@@ -137,24 +137,6 @@ svg {
     gap: 100px;
 }
 
-.gallery > ul {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.gallery > li {
-    height: 40vh;
-    flex-grow: 1;
-}
-
-.gallery > img {
-    
-    max-height: 10%;
-    min-width: 10%;
-    object-fit: cover;
-    vertical-align: bottom;
-}
-
 .item > .subtext {
     color: grey;
 }
@@ -218,11 +200,12 @@ svg {
     flex-grow: 1;
     justify-content: center;
     padding: 100px;
+    background-image: linear-gradient(to bottom right, rgba(255, 192, 203, 0.75), rgb(128, 0, 128, 0.75));
 }
 
 
 .rect {
-    background-color: #3882F6;
+    background-color: rgba(56, 130, 246, 0.8);
     width: 1100px;
     height: 150px;
     display: flex;
